# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyaxisymflow"
version = "0.0.1"
description = "Python implementation of an axisymmetric elastohydrodynamic solver."
readme = "README.md"
authors = ["Yashraj Bhosale <bhosale2@illinois.edu>", "Gaurav Upadhyay <gauravu2@illinois.edu>"]
license = "MIT"
repository = "https://github.com/bhosale2/PyAxisymFlow"

# ...
packages = [
    { include = "pyaxisymflow" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.0"
numba = "^0.55.1"
pystencils = "^1.0"
scipy = "^1.7.3"
sympy = "^1.9"
matplotlib = "^3.3.2"
seaborn = "^0.11"
vtk = "9.2.0rc2"
scikit-fmm = "2022.8.15"
# core deps
cppheaderparser = "^2.7"
pybind11 = "^2.9"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
autoflake8 = "^0.3"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
